<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/editprofile_l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/editprofile_userimage"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/photo_toolbar"
            android:layout_gravity="center_vertical"
            android:layout_margin="6dp"
            app:srcCompat="@drawable/ic_user" />

            <EditText
                android:id="@+id/editprofile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:autofillHints="@string/name"
                android:layout_marginStart="20dp"
                android:inputType="textPersonName"
                android:maxLength="46"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editprofile_l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/editprofile_phone_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/phone_number"
            android:layout_margin="6dp"
            app:srcCompat="@drawable/ic_phone" />

            <EditText
                android:id="@+id/editprofile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/phone_number"
                android:hint="@string/default_phone"
                android:inputType="phone"
                android:maxLength="15"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editprofile_l3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/editprofile_email_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/email"
            android:layout_margin="6dp"
            app:srcCompat="@drawable/ic_email" />

            <EditText
                android:id="@+id/editprofile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:maxLength="45"
                android:autofillHints="@string/email"
                android:ellipsize="end"
                android:inputType="textEmailAddress"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editprofile_l4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/editprofile_location_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/delivery_desc"
            android:layout_margin="6dp"
            app:srcCompat="@drawable/ic_location" />

            <EditText
                android:id="@+id/editprofile_deliveryAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/delivery"
                android:inputType="textPostalAddress"
                android:maxLength="100"
                android:autofillHints="@string/delivery"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editprofile_l5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/editprofile_description_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="6dp"
            android:contentDescription="@string/description"
            android:layout_gravity="top"
            app:srcCompat="@drawable/ic_description" />

            <EditText
                android:id="@+id/editprofile_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:autofillHints="@string/description"
                android:inputType="textMultiLine|textImeMultiLine|textLongMessage"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText" />

    </LinearLayout>
</LinearLayout>